# llm-chatbot-cli

./: .gitignore  LAB.md  LICENSE  README.md  TASKS.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
api/: __init__.py  main.py  storage.py
chatbot/: client.py  conversation.py  main.py
data/: session.example.json
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.css  App.tsx  api.ts  main.tsx
frontend/src/components/App/: App.tsx
frontend/src/components/FinishModal/: FinishModal.test.tsx  FinishModal.tsx
frontend/src/components/Header/: Header.test.tsx  Header.tsx
frontend/src/components/MessageList/: MessageList.test.tsx  MessageList.tsx
frontend/src/components/Panel/: Panel.test.tsx  Panel.tsx
frontend/src/components/WelcomeScreen/: WelcomeScreen.test.tsx  WelcomeScreen.tsx
frontend/src/styles/: main.css
tests/: test_api.py  test_conversation.py
