[project]
name = "llm-chatbot-cli"
version = "0.1.0"
description = "Chatbot CLI con memoria de contexto manejada a mano (Capa 1 - LLM crudo)"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.11"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
