[project]
name = "llm-chatbot-cli"
version = "0.2.0"
description = "Chatbot con memoria manual y UI de truncado de contexto (Capa 1)"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10", "httpx>=0.27"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.setuptools.packages.find]
include = ["chatbot*", "api*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
